--- a/Self_Portrait/styles.css
+++ b/Self_Portrait/styles.css
@@ -1,10 +1,31 @@
 #home {
-    background-color: #262429;
+    background-color: ;
     font-family: sans-serif;
+}
+#wrapper{
+	width: 1000px;
+	margin: 0 auto;
+
+}
+
+
+header{
+    background-image: url("img/class_logo.png");
+    background-size: 1000px 200px;
+	width: auto;
+	height: 200px;
+	margin-bottom: 10px;
+
 }
 
 ul{
-    padding: 0;
+    
+    list-style-type: none;
+    margin: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    overflow: hidden;
+    background-color: #565656;
 }
 .link {
     font-size: 2em;
@@ -13,20 +34,54 @@ ul{
     display: inline;
 }
 a{
-    color: red;
+    color: azure;
 }
 a:hover{
-    color: deeppink;
+    color: red;
+    transition: color 0.1s ease-in-out;
+	transition: all 0.5s;
+	background: white;
+	
 }
-li, a {
-    color: #FAEC33;
-    transition: color 500ms;
+}
+li{
+   
+
+
 }
 #home a{
     text-decoration: none;
-    border-top: 1px dotted blue;
+
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 h1, p{
-    color: #FAEC33
+    color: black;
+}
+#navdiv, ul{
+	width: 97.8%;
+	height: 50px;
+	background: ;
+	line-height: 50px;
+	font-size: 10px;
+    border-style: solid;
+    border-width: thin;
+    text-align: center
+}
+
+/* CSS Above is for the background and design for the nav bar. */
+
+.text{
+    border-style: solid;
+    border-width: thin;
+    background-color: #D7CEC7;
+    
+}
+
+p{
+    color: black;
+    padding: 10px;
+    text-align: left;
+
 }
