Revert "Initial commit"
This reverts commit 09a077a5ca7a08b349c181d94009fcb42c850f99.

--- a/Review/styles.css
+++ b/Review/styles.css
@@ -1,5 +1,5 @@
 #home {
-    background-color: #262429;
+    background-color: burlywood;
     font-family: sans-serif;
 }
 ul{
@@ -18,14 +18,10 @@ a:hover{
     color: deeppink;
 }
 li, a {
-    color: #FAEC33;
+    color: skyblue;
     transition: color 500ms;
 }
 #home a{
     text-decoration: none;
     border-top: 1px dotted blue;
-}
-
-h1, p{
-    color: #FAEC33
 }
