--- a/About_Me/styles.css
+++ b/About_Me/styles.css
@@ -2,12 +2,11 @@
     background-color: ;
     font-family: sans-serif;
 }
+
 #wrapper{
 	width: 1000px;
 	margin: 0 auto;
-
 }
-
 
 header{
     background-image: url("img/class_logo.png");
@@ -15,7 +14,6 @@ header{
 	width: auto;
 	height: 200px;
 	margin-bottom: 10px;
-
 }
 
 ul{
@@ -34,15 +32,26 @@ ul{
     display: inline;
 }
 a{
-    color: azure;
+    color: white;
+    
 }
 a:hover{
-    color: red;
+    color: #76323F;
     transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
-	background: white;
-	
+	background: #D7CEC7;
+    
+    padding-top: 20px;
+	padding-bottom: 20px;
+
 }
+
+a:active{
+    color:white; 
+}
+
+
+
 }
 li{
    
@@ -68,11 +77,13 @@ h1, p{
     border-style: solid;
     border-width: thin;
     text-align: center
+    
 }
 
 /* CSS Above is for the background and design for the nav bar. */
 
 .text{
+    margin-top: 10px;
     border-style: solid;
     border-width: thin;
     background-color: #D7CEC7;
@@ -85,6 +96,7 @@ p{
     text-align: center;
 
 }
+
 
 img{
     padding: 40px;
