--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,8 @@
 }
 
 
-header{
-    background-image: url("img/class_logo.png");
-    background-size: 1000px 200px;
-	width: auto;
-	height: 200px;
-	margin-bottom: 10px;
-
+h1{
+    text-align: center
 }
 
 ul{
@@ -42,7 +37,6 @@ a:hover{
     transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
 	background: #D7CEC7;
-    
     padding-top: 20px;
 	padding-bottom: 20px;
 
@@ -98,3 +92,5 @@ p{
     text-align: left;
 
 }
+
+
