--- a/Assignments/Assignment2/css/styles.css
+++ b/Assignments/Assignment2/css/styles.css
@@ -39,13 +39,23 @@ body {
 }
 
 .navbar .navbar-nav {
-	display: inline-block;
+    display: inline-block;
 	float: none;
-	vertical-align: top;
+	
+}
+
+
+.navbar-toggle {
+    float:none;
+
+}   
+.navbar-header
+{
+    text-align:center;
 }
 
 .navbar .navbar-collapse {
-	text-align: center
+	text-align: center;
 }
 
 ul {
@@ -57,7 +67,9 @@ li {}
 
 
 }
-.active {}
+.active {
+
+}
 
 /* Adds color to the nav when hovering over. */
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
@@ -66,7 +78,14 @@ li {}
 	transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
 }
-
+a {
+	color: white;
+	transition: color 0.1s ease-in-out;
+	transition: all 0.5s;
+}
+a:hover {
+	color: red;
+}
 /* Nav Ends Here */
 
 
