--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,13 @@ body {
 }
 
 
+header{
+    text-align: center;
+    background-color: black;
+    border: solid;
+    border-right-style:none;
+    border-left-style:none;
+}
 
 
 /* Nav Starts Here */
@@ -39,13 +46,23 @@ body {
 }
 
 .navbar .navbar-nav {
-	display: inline-block;
+    display: inline-block;
 	float: none;
-	vertical-align: top;
+	
+}
+
+
+.navbar-toggle {
+    float:none;
+
+}   
+.navbar-header
+{
+    text-align:center;
 }
 
 .navbar .navbar-collapse {
-	text-align: center
+	text-align: center;
 }
 
 ul {
@@ -57,7 +74,9 @@ li {}
 
 
 }
-.active {}
+.active {
+
+}
 
 /* Adds color to the nav when hovering over. */
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
@@ -66,6 +85,14 @@ li {}
 	transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
 }
+a {
+	color: white;
+	transition: color 0.1s ease-in-out;
+	transition: all 0.5s;
+}
+a:hover {
+	color: red;
+}
 
 /* Nav Ends Here */
 
@@ -73,18 +100,22 @@ li {}
 
 .carousel-header, .carousel-text{
 
-    color: white;
+    color: aqua;
+
+}
+
+img { 
+    width: 60%; 
+    margin: auto; 
 }
 
 
-
-
 	h1 {
-		font-size: 40px;
-		color: black;
-		text-align: center;
-		font-size: ;
-		font-family: "Code Light";
+	font-size: 60px;
+	color: white;
+	text-align: center;
+	font-size: ;
+	font-family: "Code Light";
 	}
 	
 	h2 {
@@ -94,7 +125,7 @@ li {}
 		font-family: "Code Light";
 	}
 
-
+img { width: 50%; margin: auto; }
 
 
 h3{
@@ -136,6 +167,10 @@ h3{
         
 }
 	
+
+
+
+
 
 	
 	.footer {
