--- a/Assignments/Assignment1/css/styles.css
+++ b/Assignments/Assignment1/css/styles.css
@@ -25,7 +25,13 @@ body {
 	src: url("fonts/CODEBold.otf") format("otf");
 }
 
-
+header {
+	text-align: center;
+	background-color: black;
+	border: solid;
+	border-right-style: none;
+	border-left-style: none;
+}
 
 
 /* Nav Starts Here */
@@ -103,11 +109,11 @@ a:hover {
 
 
 	h1 {
-		font-size: 40px;
-		color: black;
-		text-align: center;
-		font-size: ;
-		font-family: "Code Light";
+	font-size: 60px;
+	color: white;
+	text-align: center;
+	font-size: ;
+	font-family: "Code Light";
 	}
 	
 	h2 {
