--- a/Assignments/Assignment1/css/styles.css
+++ b/Assignments/Assignment1/css/styles.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-    background-color: #f0eeee;
+	background-color: #f0eeee;
 }
 
 .container {
@@ -10,22 +10,6 @@ body {
 	margin: 0 auto;
 }
 
-
-/* Fonts */
-
-@font-face {
-	font-family: "Code Bold";
-	src: url("fonts/CODEBold.otf");
-	src: url("fonts/CODEBold.otf") format("otf");
-}
-
-@font-face {
-	font-family: "Code Light";
-	src: url("fonts/CODEBold.otf");
-	src: url("fonts/CODEBold.otf") format("otf");
-}
-
-/* Header */
 header {
 	text-align: center;
 	background-color: black;
@@ -37,22 +21,25 @@ header {
 
 /* Nav Starts Here */
 
+
+/* Makes the background of the Navbar Transparent*/
+
 .navbar-default {
 	border-color: transparent;
 	background-color: transparent;
 }
 
 .navbar .navbar-nav {
-    display: inline-block;
+	display: inline-block;
 	float: none;
 }
 
-
 .navbar-toggle {
-    float:none;
-}   
-.navbar-header{
-    text-align:center;
+	float: none;
+}
+
+.navbar-header {
+	text-align: center;
 }
 
 .navbar .navbar-collapse {
@@ -60,131 +47,115 @@ header {
 }
 
 ul {
-	font-size: 20px;
-	font-family: "Code Bold";
+	font-size: 23px;
+	font-weight: bold;
+	font-family: 'Saira', sans-serif;
 }
 
-li {}
+.active {}
 
-}
-.active {
-
-}
 
 /* Adds color to the nav when hovering over. */
-.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus {
 	background-color: #B70123;
 	color: white;
 	transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
 }
+
 a {
 	color: black;
 	transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
 }
 
-
-
-/* Sketch Holder */
-
-
-#sketch-holder{
-    background color: #D7CEC7;
-    text-align: center;
+a:hover {
+	color: red;
 }
 
+/* Nav Ends Here */
 
-
-
+#sketch-holder {
+	background color: #D7CEC7;
+	text-align: center;
+	padding-bottom: 20px;
+}
 
 h1 {
-	font-size: 60px;
+	font-size: 90px;
 	color: white;
 	text-align: center;
-	font-size: ;
-	font-family: "Code Light";
+	font-weight: lighter;
+	font-family: 'Rajdhani', sans-serif;
 }
-	
+
 h2 {
-    color: black;
-    text-align: center;
-    font-size: ;
-    font-family: "Code Light";
+	color: black;
+	text-align: center;
+	font-size: ;
+	font-weight: bold;
+	font-family: 'Rajdhani', sans-serif;
 }
 
-	
+h3 {
+	text-align: center;
+	color: black;
+}
+
 .text {
-        
-    margin-top: 25px;
-}
-	
-p {
-    width: auto;
-    color: black;
-    vertical-align: middle;
-    padding-bottom: 25px;
+	margin-top: 25px;
 }
 
+p {
+	width: auto;
+	color: black;
+	vertical-align: middle;
+	padding-bottom: 25px;
+}
 
 
 /* Link Back to Assignments */
 
 a:hover {
-    text-decoration: none;
-
+	text-decoration: none;
 	color: #B70123;
-    
 }
 
-.return{
-    font-size: 25px;
-    font-family: "Code Bold";
-    text-decoration: none;
-    text-align: center;
-    
-}	
-
-
-
-/* Footer */
-
-.footer{
-    text-align: center;
-    background-color: black;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-}
-	
-.text-muted{
-    color: azure;
-    text-align: center;
-    padding-top: 40px;
+.return {
+	font-size: 30px;
+	font-weight: bold;
+	font-family: 'Rajdhani', sans-serif;
+	text-decoration: none;
+	text-align: center;
 }
 
+.footer {
+	text-align: center;
+	background-color: black;
+	position: relative;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
+}
 
-
-
+.text-muted {
+	color: azure;
+	text-align: center;
+	padding-top: 40px;
+}
 
 
 /* Responsive Text*/
-	
+
 @media screen and (max-width: 768px) {
-
-h1 {
-    font-size: 35px;
+	h1 {
+		font-size: 40px;
+	}
+	img-responsive {
+		width: 30%;
+	}
+	p {
+    }
 }
-
-h2{
-    font-size: 28px;
-}
-
-p{
-
-}
-
-
-        
-}/* Responsive ends here */
