--- a/Assignments/Assignment2/css/styles.css
+++ b/Assignments/Assignment2/css/styles.css
@@ -11,19 +11,6 @@ body {
 }
 
 
-/* Fonts */
-
-@font-face {
-	font-family: "Code Bold";
-	src: url("fonts/CODEBold.otf");
-	src: url("fonts/CODEBold.otf") format("otf");
-}
-
-@font-face {
-	font-family: "Code Light";
-	src: url("fonts/CODEBold.otf");
-	src: url("fonts/CODEBold.otf") format("otf");
-}
 
 header {
 	text-align: center;
@@ -66,14 +53,12 @@ header {
 }
 
 ul {
-	font-size: 20px;
-	font-family: "Code Bold";
+	font-size: 23px;
+    font-weight: bold;
+	font-family: 'Saira', sans-serif;
 }
 
-li {}
 
-
-}
 .active {
 
 }
@@ -93,6 +78,7 @@ a {
 a:hover {
 	color: red;
 }
+
 /* Nav Ends Here */
 
 
@@ -102,25 +88,27 @@ a:hover {
 #sketch-holder{
     background color: #D7CEC7;
     text-align: center;
+    padding-bottom: 20px;
 }
 
 
 
 
 
-	h1 {
-	font-size: 60px;
+h1 {
+	font-size: 90px;
 	color: white;
 	text-align: center;
-	font-size: ;
-	font-family: "Code Light";
-	}
+    font-weight: lighter;
+	font-family: 'Rajdhani', sans-serif;
+}
 	
 	h2 {
 		color: black;
 		text-align: center;
 		font-size: ;
-		font-family: "Code Light";
+        font-weight: bold;
+        font-family: 'Rajdhani', sans-serif;
 	}
 
 
@@ -133,38 +121,35 @@ h3{
 
 
 	
-	.text {
-        
-		margin-top: 25px;
-	}
-	
-	p {
-		width: auto;
-		color: black;
-		vertical-align: middle;
-        padding-bottom: 25px;
-	}
-
-
-
-
-	/* Responsive Text*/
-	
-	@media screen and (max-width: 768px) {
-		h1 {
-			font-size: 22px;
-		}
-		img-responsive {
-			width: 30%;
-		}
-		p {
-
-        }
-
-
-        
+.text {
+    margin-top: 25px;
 }
 	
+p {
+    width: auto;
+    color: black;
+    vertical-align: middle;
+    padding-bottom: 25px;
+}
+
+
+
+
+/* Responsive Text*/
+	
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 40px;
+}
+    img-responsive {
+        width: 30%;
+}
+    p {
+
+}      
+}
+	
+
 
 
 /* Link Back to Assignments */
@@ -177,27 +162,26 @@ a:hover {
 }
 
 .return{
-    font-size: 25px;
-    font-family: "Code Bold";
+    font-size: 30px;
+    font-weight: bold;
+	font-family: 'Rajdhani', sans-serif;
     text-decoration: none;
     text-align: center;
     
 }	
 
 
-
+.footer {
+    text-align: center;
+    background-color: black;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+}
 	
-	.footer {
-		text-align: center;
-		background-color: black;
-		position: relative;
-		bottom: 0;
-		width: 100%;
-		height: 100px;
-		/* Height of the footer */
-	}
-	
-	.text-muted {
-		text-align: center;
-		padding-top: 40px;
-	}
+.text-muted {
+    color: azure;
+    text-align: center;
+    padding-top: 40px;
+}
