--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-    background-color: #f0eeee;
+	background-color: #f0eeee;
 }
 
 .container {
@@ -10,34 +10,15 @@ body {
 	margin: 0 auto;
 }
 
-
-/* Fonts */
-
-@font-face {
-	font-family: "Code Bold";
-	src: url("fonts/CODEBold.otf");
-	src: url("fonts/CODEBold.otf") format("otf");
+header {
+	text-align: center;
+	background-color: black;
+	border: solid;
+	border-right-style: none;
+	border-left-style: none;
 }
-
-@font-face {
-	font-family: "Code Light";
-	src: url("fonts/CODEBold.otf");
-	src: url("fonts/CODEBold.otf") format("otf");
-}
-
-
-header{
-    text-align: center;
-    background-color: black;
-    border: solid;
-    border-right-style:none;
-    border-left-style:none;
-
-}
-
 
 /* Nav Starts Here */
-
 
 /* Makes the background of the Navbar Transparent*/
 
@@ -47,19 +28,16 @@ header{
 }
 
 .navbar .navbar-nav {
-    display: inline-block;
+	display: inline-block;
 	float: none;
-	
 }
 
-
 .navbar-toggle {
-    float:none;
+	float: none;
+}
 
-}   
-.navbar-header
-{
-    text-align:center;
+.navbar-header {
+	text-align: center;
 }
 
 .navbar .navbar-collapse {
@@ -67,124 +45,105 @@ header{
 }
 
 ul {
-	font-size: 20px;
-	font-family: "Code Bold";
-}
-
-li {}
-
-
-}
-.active {
-
+	font-size: 23px;
+	font-weight: bold;
+	font-family: 'Saira', sans-serif;
 }
 
 /* Adds color to the nav when hovering over. */
+
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
 	background-color: #B70123;
 	color: white;
 	transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
 }
+
 a {
 	color: black;
 	transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
 }
+
 a:hover {
 	color: red;
 }
 
 /* Nav Ends Here */
 
-
-
-.carousel-header, .carousel-text{
-
-    color: aqua;
-
+.carousel-header, .carousel-text {
+	color: aqua;
 }
 
-img { 
-    width: 60%; 
-    margin: auto; 
+img {
+	width: 60%;
+	margin: auto;
 }
 
-
-	h1 {
-	font-size: 60px;
+h1 {
+	font-size: 90px;
 	color: white;
 	text-align: center;
+	font-weight: lighter;
+	font-family: 'Rajdhani', sans-serif;
+}
+
+h2 {
+	color: black;
+	text-align: center;
 	font-size: ;
-	font-family: "Code Light";
-	}
-	
-	h2 {
-		color: black;
-		text-align: center;
-		font-size: ;
-		font-family: "Code Light";
-	}
+	font-weight: bold;
+	font-family: 'Rajdhani', sans-serif;
+}
 
-img { width: 50%; margin: auto; }
+img {
+	width: 50%;
+	margin: auto;
+}
 
+h3 {
+	text-align: center;
+	color: black;
+	font-weight: bold;
+	font-family: 'Rajdhani', sans-serif;
+}
 
-h3{
-    text-align: center;
-    color: black;
+.text {
+	margin-top: 25px;
+}
+
+p {
+	width: auto;
+	color: black;
+	vertical-align: middle;
+	padding-bottom: 25px;
+}
+
+.footer {
+	text-align: center;
+	background-color: black;
+	position: relative;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
+}
+
+.text-muted {
+	color: azure;
+	text-align: center;
+	padding-top: 40px;
 }
 
 
-	
-	.text {
-        
-		margin-top: 25px;
+/* Responsive Text*/
+@media screen and (max-width: 768px) {
+	h1 {
+		font-size: 22px;
 	}
 	
-	p {
-		width: auto;
-		color: black;
-		vertical-align: middle;
-        padding-bottom: 25px;
+	img-responsive {
+		width: 30%;
 	}
-
-
-
-
-	/* Responsive Text*/
 	
-	@media screen and (max-width: 768px) {
-		h1 {
-			font-size: 22px;
-		}
-		img-responsive {
-			width: 30%;
-		}
-		p {
-
-        }
-
-
-        
+	p {}
 }
-	
-
-
-
-
-
-	
-	.footer {
-		text-align: center;
-		background-color: black;
-		position: relative;
-		bottom: 0;
-		width: 100%;
-		height: 100px;
-		/* Height of the footer */
-	}
-	
-	.text-muted {
-		text-align: center;
-		padding-top: 40px;
-	}
