Finished Midterm, made all p5 Sketches responsive

--- a/Assignments/Assignment1/css/styles.css
+++ b/Assignments/Assignment1/css/styles.css
@@ -77,12 +77,6 @@ a:hover {
 
 /* Nav Ends Here */
 
-#sketch-holder {
-	background color: #D7CEC7;
-	text-align: center;
-	padding-bottom: 20px;
-}
-
 h1 {
 	font-size: 90px;
 	color: white;
@@ -158,4 +152,12 @@ a:hover {
 	}
 	p {
     }
+}
+
+/* Responsive sketch */
+#defaultCanvas0 {
+    height: auto;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 20px;
 }
