--- a/Assignments/Assignment2/css/styles.css
+++ b/Assignments/Assignment2/css/styles.css
@@ -81,20 +81,6 @@ a:hover {
 
 /* Nav Ends Here */
 
-
-
-
-
-#sketch-holder{
-    background color: #D7CEC7;
-    text-align: center;
-    padding-bottom: 20px;
-}
-
-
-
-
-
 h1 {
 	font-size: 90px;
 	color: white;
@@ -149,7 +135,13 @@ p {
 }      
 }
 	
-
+/* Responsive sketch */
+#defaultCanvas0 {
+    height: auto;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 20px;
+}
 
 
 /* Link Back to Assignments */
