--- a/Assignments/Assignment3/css/styles.css
+++ b/Assignments/Assignment3/css/styles.css
@@ -85,11 +85,6 @@ a:hover {
 
 
 
-#sketch-holder{
-    background color: #D7CEC7;
-    text-align: center;
-    padding-bottom: 20px;
-}
 
 
 
@@ -178,4 +173,12 @@ a:hover {
     p {
 
     }      
+}
+
+/* Responsive sketch */
+#defaultCanvas0 {
+    height: auto;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 20px;
 }
