--- a/Assignments/Assignment5/css/styles.css
+++ b/Assignments/Assignment5/css/styles.css
@@ -80,11 +80,6 @@ a:hover {
 
 /* Nav Ends Here */
 
-#sketch-holder{
-    background color: #D7CEC7;
-    text-align: center;
-    padding-bottom: 20px;
-}
 
 h1 {
 	font-size: 90px;
@@ -175,4 +170,11 @@ a:hover {
 
     }      
 }
-	
+
+/* Responsive sketch */
+#defaultCanvas0 {
+    height: auto;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 20px;
+}
