--- a/Assignments/Assignment7/css/styles.css
+++ b/Assignments/Assignment7/css/styles.css
@@ -161,7 +161,7 @@ a:hover {
 	
 @media screen and (max-width: 768px) {
     h1 {
-        font-size: 40px;
+        font-size: 60px;
     }
     img-responsive {
         width: 30%;
@@ -171,3 +171,10 @@ a:hover {
     }      
 }
 	
+/* Responsive sketch, Working on. */ 
+#defaultCanvas0 {
+    height: auto;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 20px;
+}
