--- a/Assignments/Assignment3/css/styles.css
+++ b/Assignments/Assignment3/css/styles.css
@@ -123,7 +123,7 @@ h3{
 p {
     width: auto;
     color: black;
-    vertical-align: middle;
+    text-align: center;
     padding-bottom: 25px;
 }
 
