--- a/Assignments/Assignment4/css/styles.css
+++ b/Assignments/Assignment4/css/styles.css
@@ -111,7 +111,7 @@ h3{
 p {
     width: auto;
     color: black;
-    vertical-align: middle;
+    text-align: center;
     padding-bottom: 25px;
 }
 
