--- a/Assignments/Assignment6/css/styles.css
+++ b/Assignments/Assignment6/css/styles.css
@@ -110,7 +110,7 @@ h3{
 p {
     width: auto;
     color: black;
-    vertical-align: middle;
+    text-align: center;
     padding-bottom: 25px;
 }
 
