--- a/Assignments/Assignment3/css/styles.css
+++ b/Assignments/Assignment3/css/styles.css
@@ -172,7 +172,12 @@ a:hover {
     }
     p {
 
-    }      
+    } 
+
+    .return {
+        font-size: 20px;
+    }
+     
 }
 
 /* Responsive sketch */
