--- a/Assignments/Assignment5/css/styles.css
+++ b/Assignments/Assignment5/css/styles.css
@@ -174,7 +174,12 @@ img{
     }
     p {
 
-    }      
+    }   
+
+    .return {
+        font-size: 20px;
+    }
+   
 }
 
 /* Responsive sketch */
