--- a/Assignments/Assignment6/css/styles.css
+++ b/Assignments/Assignment6/css/styles.css
@@ -163,7 +163,12 @@ a:hover {
     }
     p {
 
-    }      
+    }  
+
+    .return {
+        font-size: 20px;
+    }
+    
 }
 	
 /* Responsive sketch */
