--- a/Assignments/Assignment7/Assignment7_Functions/css/styles.css
+++ b/Assignments/Assignment7/Assignment7_Functions/css/styles.css
@@ -182,7 +182,12 @@ a:hover {
     }
     p {
 
-    }      
+    }    
+
+    .return {
+        font-size: 20px;
+    }
+  
 }
 	
 /* Responsive sketch, Working on. */ 
