--- a/Assignments/Assignment4/css/styles.css
+++ b/Assignments/Assignment4/css/styles.css
@@ -164,7 +164,12 @@ a:hover {
     }
     p {
 
-    }      
+    } 
+
+    .return {
+        font-size: 20px;
+    }
+     
 }
 
 /* Responsive sketch */
