--- a/Assignments/Assignment7/css/styles.css
+++ b/Assignments/Assignment7/css/styles.css
@@ -175,7 +175,7 @@ a:hover {
 	
 @media screen and (max-width: 768px) {
     h1 {
-        font-size: 60px;
+        font-size: 45px;
     }
     img-responsive {
         width: 30%;
@@ -183,6 +183,11 @@ a:hover {
     p {
 
     }      
+
+    .return {
+        font-size: 20px;
+    }
+
 }
 	
 /* Responsive sketch, Working on. */ 
