--- a/Assignments/Final/css/styles.css
+++ b/Assignments/Final/css/styles.css
@@ -2,14 +2,13 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	background-color: #f0eeee;
+    background-color: #f0eeee;
 }
 
 .container {
 	max-width: 1000px;
 	margin: 0 auto;
 }
-
 
 header {
 	text-align: center;
@@ -21,6 +20,7 @@ header {
 
 /* Nav Starts Here */
 
+
 /* Makes the background of the Navbar Transparent*/
 
 .navbar-default {
@@ -29,16 +29,17 @@ header {
 }
 
 .navbar .navbar-nav {
-	display: inline-block;
+    display: inline-block;
 	float: none;
+	
 }
 
 .navbar-toggle {
-	float: none;
-}
+    float:none;
 
+}   
 .navbar-header {
-	text-align: center;
+    text-align:center;
 }
 
 .navbar .navbar-collapse {
@@ -51,26 +52,30 @@ ul {
 	font-family: 'Saira', sans-serif;
 }
 
-/* Adds color to the nav when hovering over. */
 
+.active {
+
+}
+
+/* Adds color to the nav when hovering over. */
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
 	background-color: #B70123;
 	color: white;
 	transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
 }
-
 a {
 	color: black;
 	transition: color 0.1s ease-in-out;
 	transition: all 0.5s;
 }
-
 a:hover {
 	color: red;
 }
 
 /* Nav Ends Here */
+
+
 
 h1 {
 	font-size: 90px;
@@ -79,66 +84,94 @@ h1 {
     font-weight: lighter;
 	font-family: 'Rajdhani', sans-serif;
 }
-
+	
 h2 {
 	color: black;
 	text-align: center;
 	font-size: ;
-        font-family: 'Rajdhani', sans-serif;
+    font-weight: bold;
+    font-family: 'Rajdhani', sans-serif;
 }
 
+
+
+
+h3{
+    text-align: center;
+    color: black;
+}
+
+
+	
 .text {
-	margin-top: 25px;
+    margin-top: 25px;
 }
-
+	
 p {
-	width: auto;
-	color: black;
-	vertical-align: middle;
-	padding-bottom: 20px;
+    text-align: center;
+    width: auto;
+    color: black;
+    padding-bottom: 25px;
 }
 
 
+/* Link Back to Assignments */
 
-img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 55%;
+a:hover {
+    text-decoration: none;
 
-    box-shadow: 5px 5px 5px #888888;
+	color: #B70123;
+    
 }
+
+.return{
+    font-size: 30px;
+    font-weight: bold;
+	font-family: 'Rajdhani', sans-serif;
+    text-decoration: none;
+    text-align: center;
+    
+}	
 
 .footer {
-	text-align: center;
-	background-color: black;
-	position: relative;
-	bottom: 0;
-	width: 100%;
-	height: 100px;
+    text-align: center;
+    background-color: black;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
 }
-
+	
 .text-muted {
     color: azure;
-	text-align: center;
-	padding-top: 40px;
+    text-align: center;
+    padding-top: 40px;
 }
 
-
-
-
 /* Responsive Text*/
-
+	
 @media screen and (max-width: 768px) {
-	h1 {
-		font-size: 45px;
-	}
-	
-	p {
-    
+    h1 {
+        font-size: 40px;
     }
-	
-	img {
-        width: 95%;
+    img-responsive {
+        width: 30%;
     }
+    p {
+
+    }      
+
+    .return {
+        font-size: 20px;
+    }
+
+}
+
+/* Responsive sketch */
+#defaultCanvas0 {
+    background color: #D7CEC7;
+    height: auto;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 20px;
 }
