--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,21 @@
 body {
 	margin: 0;
 	padding: 0;
+    width: 100%;
 	height: 100%;
-	background-color: #f0eeee;
+	background-color: #fff;
 }
 
 .container {
-	max-width: 1000px;
+	width: 100%;
 	margin: 0 auto;
 }
 
-header {
-	text-align: center;
-	background-color: black;
-	border: solid;
-	border-right-style: none;
-	border-left-style: none;
-}
-
-/* Nav Starts Here */
+/* 
+=============================================
+Navigation
+=============================================
+*/
 
 .navbar-default {
 	border-color: transparent;
@@ -27,11 +24,24 @@ header {
 
 .navbar .navbar-nav {
 	display: inline-block;
-	float: none;
+	float: right;
+}
+
+.navbar-brand{
+    
+    font-weight: 400;
+    transition: 1s;
+    font-size: 30px;
+}
+
+#nav-name{
+
+    color: black;
+
 }
 
 .navbar-toggle {
-	float: none;
+	float: right;
 }
 
 .navbar-header {
@@ -42,13 +52,14 @@ header {
 	text-align: center;
 }
 
+
 ul {
-	font-size: 23px;
+    
+	font-size: 20px;
 	font-weight: bold;
 	font-family: 'Saira', sans-serif;
+    
 }
-
-/* Adds color to the nav when hovering over. */
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
 	background-color: #B70123;
@@ -65,68 +76,63 @@ a {
 
 a:hover {
 	color: red;
+    text-decoration: none;
 }
 
-/* Nav Ends Here */
 
 
+/* 
+=============================================
+Headers
+=============================================
+*/
 
-img {
-	width: 60%;
-	margin: auto;
-}
+
 
 h1 {
-	font-size: 90px;
+	font-size: 130px;
 	color: white;
 	text-align: center;
 	font-weight: lighter;
 	font-family: 'Rajdhani', sans-serif;
 }
 
-h2 {
-	color: black;
-	text-align: center;
-	font-size: ;
-	font-weight: bold;
-	font-family: 'Rajdhani', sans-serif;
-}
-
-img {
-	width: 50%;
-	margin: auto;
-}
-
-h3 {
-	text-align: center;
-	color: black;
-	font-weight: bold;
-	font-family: 'Rajdhani', sans-serif;
-}
 
 .text {
 	margin-top: 25px;
-}
-
-p {
     text-align: center;
-	width: auto;
-	color: black;
-	padding-bottom: 10px;
+    margin-bottom: 25px;
 }
 
 
+p{
 
-.link{
+    color: black;
+    font-size: 20px;
+    padding-bottom: 10px;
 
-    font-weight: bold;
+}
+
+/* 
+=============================================
+Links
+=============================================
+*/
+
+
+.link {
+
+    font-size: 23px;
+    text-align: center;
     text-decoration: none;
-    text-align: center;
-    
-}	
+    color: black;
 
-
-
+}
+/* 
+=============================================
+Footer
+=============================================
+*/
 
 .footer {
 	text-align: center;
@@ -135,19 +141,43 @@ p {
 	bottom: 0;
 	width: 100%;
 	height: 100px;
+    position: relative;
 }
 
 .text-muted {
 	color: azure;
+    font-size: 15px;
 	text-align: center;
 	padding-top: 40px;
 }
 
+/* 
+=============================================
+Header Image
+=============================================
+*/
 
-/* Responsive Text*/
+.header {
+  height: 525px;
+  display: flex;
+  align-items: center;
+  background: url('../img/temp.jpg') ,rgba(0,0,0, .5);
+  background-blend-mode: overlay;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+}
+
+
+/* 
+=============================================
+Responsive
+=============================================
+*/
 @media screen and (max-width: 768px) {
 	h1 {
-		font-size: 45px;
+		font-size: 35px;
 	}
 	
     .item img {
@@ -158,85 +188,4 @@ p {
         text-align: center;
     }
 
-
-
-    .carousel-caption{
-        background: rgba(0, 0, 0, 0.35);
-        border-radius: 4px;
-
-    }
-
-
-    .carousel-header {
-        color: white;
-        font-size: 20px;
-    }
-
-
-
-
-
-    .carousel-text {
-        color: white;
-        font-size: 15px;
-    }
-
-
-
-
-
-
-}
-
-
-
-
-
-
-/*Carousel*/
-.item img {
-  width: 60%;
-  height: auto;
-}
-
-
-
-
-
-a.carousel-control{
-
-background: none;
-color: red;
-}
-
-.carousel-control.left, .carousel-control.right {
-    background-image: none
-}
-
-
-
-
-
-.carousel-indicators li{
-    background-color: red;
-    width: 15px;
-    height: 5px !important;
-    border-radius: 3px !important;
-}
-
-
-
-
-
-
-.carousel-caption{
-    background: rgba(0, 0, 0, 0.35);
-    padding-top: 0;
-    padding-bottom: 0;
-    border-radius: 4px;
-}
-
-
-.carousel-header, .carousel-text {
-	color: white;
 }
