--- a/About/css/styles.css
+++ b/About/css/styles.css
@@ -1,27 +1,21 @@
 body {
 	margin: 0;
 	padding: 0;
+    width: 100%;
 	height: 100%;
-	background-color: #f0eeee;
+	background-color: #fff;
 }
 
 .container {
-	max-width: 1000px;
+	width: 100%;
 	margin: 0 auto;
 }
 
-
-header {
-	text-align: center;
-	background-color: black;
-	border: solid;
-	border-right-style: none;
-	border-left-style: none;
-}
-
-/* Nav Starts Here */
-
-/* Makes the background of the Navbar Transparent*/
+/* 
+=============================================
+Navigation
+=============================================
+*/
 
 .navbar-default {
 	border-color: transparent;
@@ -30,11 +24,24 @@ header {
 
 .navbar .navbar-nav {
 	display: inline-block;
-	float: none;
+	float: right;
+}
+
+.navbar-brand{
+    
+    font-weight: 400;
+    transition: 1s;
+    font-size: 30px;
+}
+
+#nav-name{
+
+    color: black;
+
 }
 
 .navbar-toggle {
-	float: none;
+	float: right;
 }
 
 .navbar-header {
@@ -45,13 +52,14 @@ header {
 	text-align: center;
 }
 
-ul {
-	font-size: 23px;
-    font-weight: bold;
-	font-family: 'Saira', sans-serif;
-}
 
-/* Adds color to the nav when hovering over. */
+ul {
+    
+	font-size: 20px;
+	font-weight: bold;
+	font-family: 'Saira', sans-serif;
+    
+}
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
 	background-color: #B70123;
@@ -68,10 +76,34 @@ a {
 
 a:hover {
 	color: red;
+    text-decoration: none;
 }
 
-/* Nav Ends Here */
 
+/* 
+=============================================
+Header Image
+=============================================
+*/
+
+.header {
+  height: 200px;
+  display: flex;
+  align-items: center;
+  background: url('../../img/temp.jpg') ,rgba(0,0,0, .5);
+  background-blend-mode: overlay;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+}
+
+
+/* 
+=============================================
+Headers & Text
+=============================================
+*/
 h1 {
 	font-size: 90px;
 	color: white;
@@ -80,12 +112,6 @@ h1 {
 	font-family: 'Rajdhani', sans-serif;
 }
 
-h2 {
-	color: black;
-	text-align: center;
-	font-size: ;
-        font-family: 'Rajdhani', sans-serif;
-}
 
 .text {
 	margin-top: 25px;
@@ -98,16 +124,26 @@ p {
 	padding-bottom: 20px;
 }
 
-
+/* 
+=============================================
+Image
+=============================================
+*/
 
 img {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 55%;
-
-    box-shadow: 5px 5px 5px #888888;
+    margin: 0 auto;
+    margin-bottom: 2em;
+	width: 40%;
+    border: 1px solid #333;
+    box-shadow:0 0 10px rgba(0,0,0,0.6);
 }
+
+/* 
+=============================================
+Footer
+=============================================
+*/
 
 .footer {
 	text-align: center;
@@ -125,9 +161,11 @@ img {
 }
 
 
-
-
-/* Responsive Text*/
+/* 
+=============================================
+Responsive
+=============================================
+*/
 
 @media screen and (max-width: 768px) {
 	h1 {
@@ -142,3 +180,4 @@ img {
         width: 95%;
     }
 }
+
