--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,9 @@ h1 {
 
 
 .text {
+    width:80%;
+	display: block;
+    margin: 0 auto;
 	margin-top: 25px;
     text-align: center;
     margin-bottom: 25px;
@@ -158,7 +161,7 @@ Header Image
 */
 
 .header {
-  height: 525px;
+  height: 560px;
   display: flex;
   align-items: center;
   background: url('../img/temp.jpg') ,rgba(0,0,0, .5);
