--- a/Assignments/Final/css/styles.css
+++ b/Assignments/Final/css/styles.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-    background-color: #f0eeee;
+    background-color: white;
 }
 
 .container {
@@ -165,11 +165,32 @@ a:hover {
         font-size: 20px;
     }
 
+
+
+
+
 }
+
+
+button {
+
+    background-color: white;
+    padding: 15px;
+    padding-top:10px;
+    padding-bottom:10px;
+    text-align: center;
+
+
+
+
+
+}
+
+
+
 
 /* Responsive sketch */
 #defaultCanvas0 {
-    background color: #D7CEC7;
     height: auto;
     width: 100%;
     text-align: center;
