--- a/Assignments/css/styles.css
+++ b/Assignments/css/styles.css
@@ -57,9 +57,10 @@ Navigation
 
 ul {
     
-	font-size: 20px;
-	font-weight: bold;
-	font-family: 'Saira', sans-serif;
+	font-size: 18px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
     
 }
 
