--- a/Assignments/Final/css/styles.css
+++ b/Assignments/Final/css/styles.css
@@ -189,3 +189,10 @@ button {
 
 
 
+/* Responsive sketch */
+#defaultCanvas0 {
+    height: auto;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 20px;
+}
