--- a/Assignments/Final/css/styles.css
+++ b/Assignments/Final/css/styles.css
@@ -1,198 +1,29 @@
-body {
-	margin: 0;
-	padding: 0;
-	height: 100%;
-    background-color: white;
-}
-
-.container {
-	max-width: 1000px;
-	margin: 0 auto;
-}
-
-header {
-	text-align: center;
-	background-color: black;
-	border: solid;
-	border-right-style: none;
-	border-left-style: none;
-}
-
-/* Nav Starts Here */
-
-
-/* Makes the background of the Navbar Transparent*/
-
-.navbar-default {
-	border-color: transparent;
-	background-color: transparent;
-}
-
-.navbar .navbar-nav {
-    display: inline-block;
-	float: none;
-	
-}
-
-.navbar-toggle {
-    float:none;
-
-}   
-.navbar-header {
-    text-align:center;
-}
-
-.navbar .navbar-collapse {
-	text-align: center;
-}
-
-ul {
-	font-size: 23px;
-    font-weight: bold;
-	font-family: 'Saira', sans-serif;
-}
-
-
-.active {
-
-}
-
-/* Adds color to the nav when hovering over. */
-.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-	background-color: #B70123;
-	color: white;
-	transition: color 0.1s ease-in-out;
-	transition: all 0.5s;
-}
-a {
-	color: black;
-	transition: color 0.1s ease-in-out;
-	transition: all 0.5s;
-}
-a:hover {
-	color: red;
-}
-
-/* Nav Ends Here */
-
-
-
-h1 {
-	font-size: 90px;
-	color: white;
-	text-align: center;
-    font-weight: lighter;
-	font-family: 'Rajdhani', sans-serif;
-}
-	
-h2 {
+h1{
 	color: black;
 	text-align: center;
-	font-size: ;
-    font-weight: bold;
-    font-family: 'Rajdhani', sans-serif;
-}
-
-
-
-
-h3{
-    text-align: center;
-    color: black;
-}
-
-
-	
-.text {
-    margin-top: 25px;
-}
+    font-family: 'Sintony', sans-serif;
+}	
 	
 p {
     text-align: center;
     width: auto;
     color: black;
-    padding-bottom: 25px;
+    font-family: 'Sintony', sans-serif;
 }
-
-
-/* Link Back to Assignments */
-
-a:hover {
-    text-decoration: none;
-
-	color: #B70123;
-    
-}
-
-.return{
-    font-size: 30px;
-    font-weight: bold;
-	font-family: 'Rajdhani', sans-serif;
-    text-decoration: none;
-    text-align: center;
-    
-}	
-
-.footer {
-    text-align: center;
-    background-color: black;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-}
-	
-.text-muted {
-    color: azure;
-    text-align: center;
-    padding-top: 40px;
-}
-
-/* Responsive Text*/
-	
-@media screen and (max-width: 768px) {
-    h1 {
-        font-size: 40px;
-    }
-    img-responsive {
-        width: 30%;
-    }
-    p {
-
-    }      
-
-    .return {
-        font-size: 20px;
-    }
-
-
-
-
-
-}
-
 
 button {
-
+    font-family: 'Sintony', sans-serif;
     background-color: white;
+    font-size: 1em;
     padding: 15px;
     padding-top:10px;
     padding-bottom:10px;
     text-align: center;
 
-
-
-
-
 }
 
+button:hover {
+    color: blue;
+	transition: color 0.2s ease-in-out;
 
-
-
-/* Responsive sketch */
-#defaultCanvas0 {
-    height: auto;
-    width: 100%;
-    text-align: center;
-    padding-bottom: 20px;
 }
